# ShaReComp

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.fio  Dockerfile.monitor  Dockerfile.stress-ng-cpu  Dockerfile.stress-ng-mem-stream  Dockerfile.stress-ng-mem-vm  README.md  affinity_score_matrix.csv  compute_affinity_matrix.ipynb  config.yml  monitoring_data.ipynb  package-lock.json  package.json  pyproject.toml  server.py  workflow_monitoring.ipynb  workload_experiments.ipynb
coloc-app/: .gitignore  offline_init.py  pyproject.toml  requirements.txt  server.py
coloc-app/utils/: helpers.py
gude_power/: monitor.sh  output.json  output_idle.json
output/0154141363dd/power/: timeseries.csv
output/374712c89536/power/: timeseries.csv
output/3f51437b8f69/power/: timeseries.csv
output/4088b4afc5c1/power/: timeseries.csv
output/4985144b92c9/power/: timeseries.csv
output/7eed0c770037/power/: timeseries.csv
output/8d99eba305d6/power/: timeseries.csv
output/927f4b01a6ec/power/: timeseries.csv
output/93224d73bf81/power/: timeseries.csv
output/934e83a75c87/power/: timeseries.csv
output/98b9533690b8/power/: timeseries.csv
output/9e7f955344f5/power/: timeseries.csv
output/b9866dca617e/power/: timeseries.csv
output/bb6bcdc4581a/power/: timeseries.csv
output/bd42856447c1/power/: timeseries.csv
output/c74ea43a3d76/power/: timeseries.csv
output/c9ed0a277402/power/: timeseries.csv
output/cb20916bf0c5/power/: timeseries.csv
output/df261485f290/power/: timeseries.csv
output/ece97eaa1c4e/power/: timeseries.csv
results/: died_nextflow_containers.csv  started_nextflow_containers.csv
results/task_cpu_data/cAdvisor/container_cpu_user_seconds_total/: container_cpu_user_seconds_total.csv
results/task_cpu_data/docker-activity/cpuPercent/: cpuPercent.csv
results/task_cpu_data/ebpf-mon/container_weighted_cycles/: container_weighted_cycles.csv
results/task_energy_data/docker-activity/energyUsage/: energyUsage.csv
results/task_energy_data/ebpf-mon/container_power/: container_power.csv
results/task_metadata/slurm-job-exporter/slurm_job_id/: slurm_job_id.csv
